--- a/pages/user-info/user-info.html
+++ b/pages/user-info/user-info.html
@@ -5,43 +5,68 @@
     <title>User info</title>
     <link rel="stylesheet" href="../../index.css">
     <link rel="stylesheet" href="user-info.css">
+
+    <!-- Библиотеки -->
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
+            src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
+
+    <script src="user-info.js" type="module"></script>
 </head>
 <body>
 <div class="user-info-window">
     <div class="user-info-block">
         <h1>Информация о пользователе</h1>
-        <div class="user-avatar-and-info-block">
-            <div class="user-avatar-block">
-                <img class="user-avatar-block__avatar" src="https://placekitten.com/500/500">
-                <a href="http://google.com">Изменить аватар</a>
+        <form name="user-info">
+            <div class="user-avatar-and-info-block">
+                <div class="user-avatar-block">
+                    <img class="user-avatar-block__avatar" src="https://placekitten.com/500/500">
+                    <a href="http://google.com">Изменить аватар</a>
+                </div>
+                <div class="info-block">
+                    <div class="info-block__input-with-errors-container">
+                        <input class="info-block__input" name="name" placeholder="ФИО" type="text"/>
+                        <div id="name-errors-container">
+
+                        </div>
+                    </div>
+
+                    <div class="info-block__input-with-errors-container">
+                        <input class="info-block__input" name="login" placeholder="Логин" type="text"/>
+                        <div id="login-errors-container">
+
+                        </div>
+                    </div>
+
+                    <div class="info-block__input-with-errors-container">
+                        <input class="info-block__input" name="old-password" placeholder="Старый пароль"
+                               type="password"/>
+                        <div id="old-password-errors-container">
+
+                        </div>
+                    </div>
+
+                    <div class="info-block__input-with-errors-container">
+                        <input class="info-block__input" name="password" placeholder="Новый пароль" type="password"/>
+                        <div id="password-errors-container">
+
+                        </div>
+                    </div>
+
+                    <div class="info-block__input-with-errors-container">
+                        <input class="info-block__input" name="password-confirmation" placeholder="Новый пароль еще раз"
+                               type="password"/>
+                        <div id="password-confirmation-errors-container">
+
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="info-block">
-                <div class="info-block__input-with-errors-container">
-                    <input class="info-block__input info-block__input__has-error" type="text" placeholder="ФИО"/>
-                    <div class="info-block__validation-error-text">Сообщение об ошибке один!</div>
-                    <div class="info-block__validation-error-text">Сообщение об ошибке два!</div>
-                </div>
-
-                <div class="info-block__input-with-errors-container">
-                    <input class="info-block__input" type="text" placeholder="Логин"/>
-                </div>
-
-                <div class="info-block__input-with-errors-container">
-                    <input class="info-block__input" type="password" placeholder="Старый пароль"/>
-                </div>
-
-                <div class="info-block__input-with-errors-container">
-                    <input class="info-block__input" type="password" placeholder="Новый пароль"/>
-                </div>
-
-                <div class="info-block__input-with-errors-container">
-                    <input class="info-block__input" type="password" placeholder="Новый пароль еще раз"/>
-                </div>
+            <div style="display: flex; flex-direction: column; margin-top: 16px">
+                <button class="user-info-block__button user-info-block__primary-button">Сохранить</button>
             </div>
-        </div>
-        <div style="display: flex; flex-direction: column; margin-top: 16px">
-            <button class="user-info-block__button user-info-block__primary-button">Сохранить</button>
-        </div>
+        </form>
     </div>
 </div>
 </body>
